<resources>
    <string name="app_name">myDDL</string>
    <string name="Login_Name_hint">Please Enter Your Username</string>
    <string name="Login_Password_hint">Please Enter Your Password</string>
    <string name="Text_btn_login">Login</string>
    <string name="Text_New_User">New User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="New_User_Name">User Name</string>
    <string name="New_User_Password">Password</string>
    <string name="New_User_Password_Confirm">Confirm Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="New_User_Name_hint">User Name</string>
</resources>
